--- a/package.json
+++ b/package.json
@@ -5,29 +5,31 @@
   "main": "gulpfile.js",
   "scripts": {
     "start": "gulp start",
+    "dev": "gulp dev",
+    "zip": "gulp zip",
     "build": "gulp build",
-    "clean": "gulp clean",
-    "dev": "gulp dev"
+    "clean": "gulp clean"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "browser-sync": "^2.26.13",
     "del": "^6.0.0",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-clean-css": "^4.3.0",
+    "gulp-image": "^6.2.1",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^4.0.1",
-    "gulp-shorthand": "^1.1.0",
-    "browser-sync": "^2.26.13",
-    "gulp": "^4.0.2",
-    "gulp-image": "^6.2.1",
     "gulp-pug-linter": "^1.4.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
+    "gulp-shorthand": "^1.1.0",
     "gulp-terser": "^2.0.0",
     "gulp-w3c-html-validator": "^2.0.1",
+    "gulp-zip": "^5.1.0",
     "node-sass": "^5.0.0"
   }
 }
